examples/test/testpolicy8996.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8996
  namespace: namespace7
spec:
  podSelector:
    matchLabels:
      key17: value29
      key42: value13
      key43: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value27
      podSelector:
        matchLabels:
          key3: value41
          key1: value31
          key46: value42
